[project]
name = "mmm-db"
description = "Supports colony db data files"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "license.txt"}
authors = [
    {name = "Brad Buran", email="buran@ohsu.edu"},
]
maintainers = [
    {name = "Brad Buran", email="buran@ohsu.edu"},
]
dependencies = [
    'cochleogram[lif,czi]',
    'psidata>=0.1.13',
    'cftsdata[zarr]>=0.1.9',
    'abtsdata>=0.0.2',
    'plotly',
]
dynamic = ["version"]

[build-system]
requires = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/mmm_db/version.py"

[tool.setuptools.packages.find]
where = ["src"]
